# WaitExec

./: Cargo.toml  README.md
.github/workflows/: build.yaml  test.yaml
resources/: schema.sql  wait_exec.toml
src/: config.rs  db_manager.rs  lib.rs  main.rs  process.rs
