[package]
name = "wait_exec"
version = "0.0.1"
authors = ["shenjiahuan <shenjiahuan@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
mysql = "20.1.0"
hostname = "^0.3"